SalesforceData/src/objects/DEPARTMENT__c.object
<CustomObject>
    <fields>
        <fullName>Department_ID__c</fullName>
        <displayFormat>DEP-{000000}</displayFormat>
        <label>Department ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>DEPARTMENT</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DEPARTMENT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEPARTMENTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>